--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^11.1.2",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
