--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -21,6 +21,8 @@
     "@react-navigation/stack": "^5.14.3",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-dynamic-search-bar": "^2.0.0",
+    "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.0",
