--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -13,22 +13,22 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
-<<<<<<< Updated upstream
-=======
-    "@react-native-firebase/app": "^11.2.0",
->>>>>>> Stashed changes
+    "@react-native-firebase/app": "^11.3.0",
+    "@react-native-firebase/auth": "^11.3.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
     "@react-navigation/material-top-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-paper": "^4.7.2",
-    "react-native-reanimated": "^2.0.0",
+    "react-native-reanimated": "^2.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
