--- a/TalentCarrotMarket/android/app/build.gradle
+++ b/TalentCarrotMarket/android/app/build.gradle
@@ -161,6 +161,8 @@ android {
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
+            // minifyEnabled false
+            // matchingFallbacks = ['release', 'debug']
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
@@ -183,6 +185,7 @@ android {
 }
 
 dependencies {
+    // implementation project(':react-native-community-geolocation')
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
