--- a/TalentCarrotMarket/android/app/src/main/AndroidManifest.xml
+++ b/TalentCarrotMarket/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
   package="com.talentcarrotmarket">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>    
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
       android:name=".MainApplication"
@@ -10,6 +12,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data android:name="com.naver.maps.map.CLIENT_ID"
+        android:value="3makbuu5lg" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -21,5 +25,6 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <!-- <meta-data android:name="com.kakao.sdk.AppKey" android:value="a12a8c9672da0ab89b73090ce3a25b98"/> -->
     </application>
 </manifest>
