--- a/TalentCarrotMarket/android/settings.gradle
+++ b/TalentCarrotMarket/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'TalentCarrotMarket'
+// include ':react-native-community-geolocation'
+// project(':react-native-community-geolocation').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/geolocation/android')
+// include ':react-native-daummap'
+// project(':react-native-daummap').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-daummap/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
