--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -24,14 +24,17 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-nmap": "0.0.61",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-switch-selector": "^2.1.4",
     "react-native-tab-view": "^3.0.0",
     "react-native-vector-icons": "^8.1.0"
   },
