--- a/TalentCarrotMarket/android/app/build.gradle
+++ b/TalentCarrotMarket/android/app/build.gradle
@@ -186,7 +186,8 @@ android {
 
 dependencies {
     // implementation project(':react-native-community-geolocation')
-    implementation platform('com.google.firebase:firebase-bom:27.0.0')
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
+    // implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
