--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -24,6 +24,8 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-dynamic-search-bar": "^2.0.0",
+    "react-native-elements": "^3.4.1",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
