--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
+    "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-dynamic-search-bar": "^2.0.0",
