--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
+    "jquery": "^3.6.0",
     "native-base": "^2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.0",
@@ -30,6 +31,7 @@
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-nmap": "0.0.61",
     "react-native-paper": "^4.7.2",
