이미지 요청 및 S3 저장

--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -24,8 +24,10 @@
     "axios": "^0.21.1",
     "jquery": "^3.6.0",
     "native-base": "^2.15.2",
+    "path": "^0.12.7",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-aws3": "0.0.9",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
     "react-native-geolocation-service": "^5.2.0",
