--- a/TalentCarrotMarket/android/app/src/main/AndroidManifest.xml
+++ b/TalentCarrotMarket/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
+      android:usesCleartextTraffic="true"
+      android:requestLegacyExternalStorage="true"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
