--- a/TalentCarrotMarket/android/app/src/debug/AndroidManifest.xml
+++ b/TalentCarrotMarket/android/app/src/debug/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application
+    <uses-permission android : name = "android.permission.CAMERA"/> 
+<uses-permission android : name = "android.permission.READ_EXTERNAL_STORAGE"/> 
+<uses-permission android : name = "android.permission.WRITE_EXTERNAL_STORAGE"/ >
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
         tools:ignore="GoogleAppIndexingWarning">
