--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -30,6 +30,7 @@
     "react-native-aws3": "0.0.9",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
+    "react-native-flatlist-slider": "^1.0.5",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
