--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^11.3.0",
     "@react-native-firebase/auth": "^11.3.0",
+    "@react-native-firebase/firestore": "^11.4.1",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
