--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -46,7 +46,8 @@
     "react-native-screens": "^2.18.1",
     "react-native-switch-selector": "^2.1.4",
     "react-native-tab-view": "^3.0.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "socket.io-client": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
