--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@actbase/react-daum-postcode": "^0.9.2",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
@@ -48,6 +49,7 @@
     "react-native-switch-selector": "^2.1.4",
     "react-native-tab-view": "^3.0.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.4.4",
     "socket.io-client": "^4.0.1"
   },
   "devDependencies": {
