--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^11.3.0",
@@ -29,6 +30,7 @@
     "path": "^0.12.7",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-animated-absolute-buttons": "^1.0.1",
     "react-native-aws3": "^0.0.9",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
@@ -37,7 +39,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.36.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-nmap": "0.0.61",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
