--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -13,8 +13,9 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^11.3.0",
+    "@react-native-firebase/app": "11.4.1",
     "@react-native-firebase/auth": "^11.3.0",
+    "@react-native-firebase/messaging": "11.4.1",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
@@ -27,7 +28,10 @@
     "path": "^0.12.7",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-alarm-notification": "1.7.1",
     "react-native-aws3": "^0.0.9",
+    "react-native-background-timer": "2.4.1",
+    "react-native-countdown-component": "2.7.1",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
     "react-native-flatlist-slider": "^1.0.5",
@@ -38,6 +42,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-nmap": "0.0.61",
     "react-native-paper": "^4.7.2",
+    "react-native-push-notification": "7.2.3",
     "react-native-reanimated": "^2.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
