--- a/TalentCarrotMarket/android/app/build.gradle
+++ b/TalentCarrotMarket/android/app/build.gradle
@@ -195,6 +195,10 @@ dependencies {
     implementation "com.google.firebase:firebase-analytics"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation project(':react-native-background-timer')
+
+
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
