--- a/TalentCarrotMarket/android/app/src/main/AndroidManifest.xml
+++ b/TalentCarrotMarket/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,18 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>    
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/> 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+
+
+
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -28,6 +39,30 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-      <!-- <meta-data android:name="com.kakao.sdk.AppKey" android:value="a12a8c9672da0ab89b73090ce3a25b98"/> -->
+
+        <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" />
+        <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+
+        </receiver>
+        <service
+            android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationListenerService"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+
+        </service>
+        <meta-data  android:name="com.dieam.reactnativepushnotification.notification_foreground"
+            android:value="true"/>
+        <meta-data  android:name="com.dieam.reactnativepushnotification.notification_channel_name"
+            android:value="Example-Channel"/>
+        <meta-data  android:name="com.dieam.reactnativepushnotification.notification_channel_description"
+            android:value="Super channel description"/>
+        <meta-data  android:name="com.dieam.reactnativepushnotification.notification_color"
+            android:resource="@android:color/white"/>
+
     </application>
 </manifest>
