--- a/TalentCarrotMarket/android/settings.gradle
+++ b/TalentCarrotMarket/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'TalentCarrotMarket'
+include ':react-native-background-timer'
+project(':react-native-background-timer').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-background-timer/android')
+include ':react-native-alarm-notification'
+project(':react-native-alarm-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-alarm-notification/android')
 // include ':react-native-community-geolocation'
 // project(':react-native-community-geolocation').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/geolocation/android')
 // include ':react-native-daummap'
