--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.64.0",
     "react-native-animated-absolute-buttons": "^1.0.1",
     "react-native-aws3": "^0.0.9",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
     "react-native-flatlist-slider": "^1.0.5",
