--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -30,7 +30,9 @@
     "native-base": "^2.15.2",
     "path": "^0.12.7",
     "react": "17.0.1",
+    "react-daum-postcode": "^2.0.6",
     "react-native": "0.64.0",
+    "react-native-animated-absolute-buttons": "^1.0.1",
     "react-native-aws3": "^0.0.9",
     "react-native-countdown-component": "^2.7.1",
     "react-native-dynamic-search-bar": "^2.0.0",
