--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@actbase/react-daum-postcode": "^0.9.2",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.4.7",
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^11.3.0",
