--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -44,6 +44,7 @@
     "react-native-image-crop-picker": "^0.36.0",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-modal": "^11.10.0",
     "react-native-nmap": "0.0.61",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^2.0.1",
