--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -38,6 +38,7 @@
     "react-native-countdown-component": "^2.7.1",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
+    "react-native-flash-message": "^0.1.23",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
