--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -50,6 +50,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-switch-selector": "^2.1.4",
     "react-native-tab-view": "^3.0.0",
     "react-native-vector-icons": "^8.1.0",
