자격증 인증 카메라 기능 추가

--- a/TalentCarrotMarket/android/app/build.gradle
+++ b/TalentCarrotMarket/android/app/build.gradle
@@ -136,6 +136,7 @@ android {
         vectorDrawables.useSupportLibrary = true
         versionCode 1
         versionName "1.0"
+        missingDimensionStrategy 'react-native-camera', 'general'
     }
     splits {
         abi {
