--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -50,6 +50,7 @@
     "react-native-modal": "^11.10.0",
     "react-native-nmap": "0.0.61",
     "react-native-paper": "^4.7.2",
+    "react-native-push-notification": "^7.3.1",
     "react-native-reanimated": "^2.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
