--- a/TalentCarrotMarket/android/app/build.gradle
+++ b/TalentCarrotMarket/android/app/build.gradle
@@ -189,6 +189,8 @@ android {
 dependencies {
     // implementation project(':react-native-community-geolocation')
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
+    implementation project(':react-native-webview')
+    implementation project(':iamport-react-native')
     // implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
