--- a/TalentCarrotMarket/ios/Podfile
+++ b/TalentCarrotMarket/ios/Podfile
@@ -12,6 +12,10 @@ target 'TalentCarrotMarket' do
     :hermes_enabled => false
   )
 
+  pod 'IamportReactNative', :path => '../node_modules/iamport-react-native'
+
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'TalentCarrotMarketTests' do
     inherit! :complete
     # Pods for testing
