--- a/TalentCarrotMarket/android/app/src/main/AndroidManifest.xml
+++ b/TalentCarrotMarket/android/app/src/main/AndroidManifest.xml
@@ -43,6 +43,15 @@
           </intent-filter>
       </service>
 
+      <service android:name="io.invertase.firebase.messaging.RNFirebaseMessagingService">
+          <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+          </intent-filter>
+      </service>
+
+      <service android:name="io.invertase.firebase.messaging.RNFirebaseBackgroundMessagingService" />
+
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
