--- a/TalentCarrotMarket/android/settings.gradle
+++ b/TalentCarrotMarket/android/settings.gradle
@@ -1,4 +1,10 @@
 rootProject.name = 'TalentCarrotMarket'
+include ':@react-native-firebase_messaging'
+project(':@react-native-firebase_messaging').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-firebase/messaging/android')
+include ':react-native-firebase'
+project(':react-native-firebase').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firebase/android')
+include ':iamport-react-native'
+project(':iamport-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/iamport-react-native/android')
 // include ':react-native-community-geolocation'
 // project(':react-native-community-geolocation').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/geolocation/android')
 // include ':react-native-daummap'
