--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/app": "^11.3.0",
     "@react-native-firebase/auth": "^11.3.0",
     "@react-native-firebase/firestore": "^11.4.1",
+    "@react-native-firebase/messaging": "^12.0.0",
     "@react-native-picker/picker": "^1.15.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
@@ -28,6 +29,7 @@
     "axios": "^0.21.1",
     "crypto-js": "^4.0.0",
     "haversine": "^1.1.1",
+    "iamport-react-native": "^1.6.3",
     "jquery": "^3.6.0",
     "native-base": "^2.15.2",
     "path": "^0.12.7",
@@ -40,6 +42,7 @@
     "react-native-countdown-component": "^2.7.1",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
+    "react-native-firebase": "^5.6.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
