--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -54,6 +54,7 @@
     "react-native-nmap": "0.0.61",
     "react-native-paper": "^4.7.2",
     "react-native-push-notification": "^7.3.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^2.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.2.0",
