--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -42,7 +42,6 @@
     "react-native-countdown-component": "^2.7.1",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
-    "react-native-firebase": "^5.6.0",
     "react-native-flash-message": "^0.1.23",
     "react-native-geolocation-service": "^5.2.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -62,6 +61,7 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-switch-selector": "^2.1.4",
     "react-native-tab-view": "^3.0.0",
+    "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.4.4",
     "socket.io-client": "^4.0.1"
