--- a/TalentCarrotMarket/package.json
+++ b/TalentCarrotMarket/package.json
@@ -40,6 +40,7 @@
     "react-native-aws3": "^0.0.9",
     "react-native-camera": "^3.43.9",
     "react-native-countdown-component": "^2.7.1",
+    "react-native-dropdown-picker": "^5.1.21",
     "react-native-dynamic-search-bar": "^2.0.0",
     "react-native-elements": "^3.4.1",
     "react-native-flash-message": "^0.1.23",
